# pdf-spellcheck

./: App.py  Comprehensive_Readme.md  CreateDict.py  Launch_CreateDict.bat  Launch_SpellCheck.bat  PRD.md  README.md  SpellCheck.py  pyproject.toml  pytest.ini  to-do.md
default_dict/: Bridges.txt  Civil.txt  Electrical.txt  General.txt  Instrumentation.txt  Landscape.txt  Mechanical.txt  Process.txt  structural.txt
src/ae-spellcheck/: __init__.py  extractor.py
src/ae_spellcheck/: __init__.py  abbreviations.pkl  extractor.py  wordlist.py
utils/: dictionary.py  html.py  pdf.py
utils/tests/: test_dictionary.py  test_html.py  test_pdf.py
