[project]
name = "ae_spellcheck"
version = "0.0.1"
requires-python = ">=3.13.0"
authors = [{name = "Arun Kishore", email = "pypi@rpakishore.co.in"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)"]
dependencies = [
    "pymupdf>=1.25.3",
    "streamlit>=1.42.2",
]

[project.urls]
Home = "https://github.com/rpakishore/pdf-spellcheck"

[tool.setuptools.dynamic]
description = {file = "README.md"}

[tool.uv.sources]
pdoc-ai = { git = "https://github.com/rpakishore/pdoc_ai" }

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "pdoc-ai",
    "pdoc>=15.0.1",
    "ruff>=0.9.1",
]
test = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[tool.uv]
default-groups = ["dev"]
package = true
